--- a/main.scss
+++ b/main.scss
@@ -12,8 +12,22 @@ html {
   box-sizing: border-box;
 }
 body {
+  height: 100vh;
+  width: 100vw;
   background: purple;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.canvas {
+  height: 60vh;
+  width: 50vw;
+  border: 1px solid black;
+  display: grid;
+  grid-template: repeat(10, 1fr) / repeat(10, 1fr);
+
+  & > * {
+    border: 1px solid black;
+  }
 }
