--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ nav {
   nav .logo {
     height: 6vh;
     width: 12.5vw;
-    -webkit-clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
-            clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
     border: 1px solid white;
     border-right: none;
     display: flex;
@@ -22,19 +21,16 @@ nav {
     align-items: center;
     justify-content: flex-end;
     cursor: pointer;
-    -webkit-filter: drop-shadow(1rem 1rem 0.5rem black);
-            filter: drop-shadow(1rem 1rem 0.5rem black); }
+    filter: drop-shadow(1rem 1rem 0.5rem black); }
     nav .logo h5 {
       color: white;
       font-weight: 100;
       font-family: 'Lato';
-      -webkit-filter: drop-shadow(1rem 1rem 0.5rem black);
-              filter: drop-shadow(1rem 1rem 0.5rem black);
+      filter: drop-shadow(1rem 1rem 0.5rem black);
       transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1); }
     nav .logo__p {
       font-size: 4rem;
-      -webkit-transform: rotateY(180deg) translateX(-1rem);
-              transform: rotateY(180deg) translateX(-1rem);
+      transform: rotateY(180deg) translateX(-1rem);
       transition: all .5s; }
     nav .logo__m {
       margin-right: 2vw;
@@ -47,14 +43,11 @@ nav {
     height: 4.5vh;
     width: 4.5vw;
     margin: 1vh 0;
-    -webkit-transform-origin: 100%;
-            transform-origin: 100%;
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
+    transform-origin: 100%;
+    transform: scaleX(0);
     transition: all cubic-bezier(0.165, 0.84, 0.44, 1) 0.5s; }
     nav li img {
-      -webkit-filter: drop-shadow(1rem 1rem 0.5rem black);
-              filter: drop-shadow(1rem 1rem 0.5rem black);
+      filter: drop-shadow(1rem 1rem 0.5rem black);
       height: 100%;
       width: 100%; }
     nav li:nth-child(2) {
@@ -62,18 +55,18 @@ nav {
     nav li:nth-child(3) {
       transition-delay: .4s; }
   nav:hover .logo__p {
-    -webkit-transform: rotateY(0) translateX(0);
-            transform: rotateY(0) translateX(0); }
+    transform: rotateY(0) translateX(0); }
   nav:hover ul li {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1); }
+    transform: scaleX(1); }
 
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+  font-family: 'lato';
+  color: white; }
 
 html {
   font-size: 62.5%;
@@ -82,16 +75,55 @@ html {
 body {
   height: 100vh;
   width: 100vw;
-  background: purple;
+  background-image: linear-gradient(to bottom right, #ff6a07, #ba4a00);
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center; }
+  justify-content: space-evenly; }
 
 .canvas {
   height: 60vh;
   width: 50vw;
-  border: 1px solid black;
+  border: 1px solid white;
   display: grid;
   grid-template: repeat(10, 1fr)/repeat(10, 1fr); }
   .canvas > * {
-    border: 1px solid black; }
+    border: 1px solid white;
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.25);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
+    .canvas > *:hover {
+      transform: scale(1.05); }
+    .canvas > *:active {
+      transform: scale(0.95); }
+
+.info {
+  width: 100vw;
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-evenly; }
+  .info h4,
+  .info h5,
+  .info button {
+    text-transform: uppercase;
+    letter-spacing: .4rem; }
+  .info button {
+    background: none;
+    padding: 1rem 2rem;
+    align-self: flex-start;
+    cursor: pointer;
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
+    .info button:hover {
+      transform: scale(1.05); }
+    .info button:active {
+      transform: scale(0.95); }
+  .info h4::after {
+    content: '';
+    display: block;
+    background: white;
+    width: 100%;
+    height: 1px;
+    margin: 1rem 0; }
+  .info h5 {
+    font-size: 2rem;
+    font-weight: 100; }
